# superset-api-client

./: .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: publishing.yaml  python-package.yaml
examples/: change_colors.py  copy_dashboard.py  css_templates.py  dashboards.py  delete_dashboard.py  export_dashboard.py  export_dataset.py  quickstart.py
supersetapiclient/: client.py  css_templates.py  dashboards.py
tests/: conftest.py  superset_config.py
